# mergesort-visualization-SFML

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
include/: Bar.hpp  algo.hpp  constants.hpp  utils.hpp
src/: Bar.cpp  Main.cpp
